Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-10941

[upr] Intermittent missing mutations when multiple streams are opened

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Test Blocker
    • 3.0
    • 3.0
    • Security Level: Public
    • None
    • Build 3.0.0-594-rel
    • Untriaged
    • Unknown
    • June 30 - July 18

    Description

      Original subject:
      View queries return errors on " key with invalid state "

      Output from

      ======================================================================
      FAIL: test_employee_dataset_startkey_endkey_queries_rebalance_in (view.viewquerytests.ViewQueryTests)
      ----------------------------------------------------------------------
      Traceback (most recent call last):
      File "pytests/view/viewquerytests.py", line 855, in test_employee_dataset_startkey_endkey_queries_rebalance_in
      self._query_all_views(data_set.views, gen_load)
      File "pytests/view/viewquerytests.py", line 1979, in _query_all_views
      self._check_view_intergrity(views)
      File "pytests/view/viewquerytests.py", line 1997, in _check_view_intergrity

      Failing test : ./testrunner -i /tmp/centos64.ini max-dupe-result-count=10,get-cbcollect-info=True,num-tries=60,attempt-num=60,get-delays=True,GROUP=P0 -t view.viewquerytests.ViewQueryTests.test_employee_dataset_startkey_endkey_queries_rebalance_in,num_nodes_to_add=1,skip_rebalance=true,GROUP=P0

      Test information : http://qa.sc.couchbase.com/job/centos_x64-02-01-view-query-2-P0/lastCompletedBuild/testReport/

      Uploading logs.
      self.fail(self._form_report_failure(failures, views))
      AssertionError:

                                        • Error report *********************
                                          Failure message is: Exception: DEBUG INFO: [
                                          Unknown macro: {'msg'}

                                          ]

      Test case info:

      Test uses employee data set:
      -documents are structured as

      {"name": name<string>, "join_yr" : year<int>, "join_mo" : month<int>, "join_day" : day<int>, "email": email<string>, "job_title" : title<string>, "type" : type<string>, "desc" : desc<tring>}

      Steps to repro:
      1. Start load data
      3. start rebalance in
      4. Start querying

      Views structure are:
      Views : ['test_view-4c1ca79 : map_fn=function (doc)

      { if(doc.job_title !== undefined) emit([doc.join_yr, doc.join_mo, doc.join_day], [doc.name, doc.email] ); }, reduce_fn=None', 'test_view-2f2ed85 : map_fn=function (doc) { if(doc.job_title !== undefined) { var myregexp = new RegExp("^UI "); if(doc.job_title.match(myregexp)){ emit([doc.join_yr, doc.join_mo, doc.join_day], [doc.name, doc.email] );}}}, reduce_fn=None', 'test_view-b513a78 : map_fn=function (doc) { if(doc.job_title !== undefined) { var myregexp = new RegExp("^System "); if(doc.job_title.match(myregexp)){ emit([doc.join_yr, doc.join_mo, doc.join_day], [doc.name, doc.email] );}}}, reduce_fn=None', 'test_view-99552ed : map_fn=function (doc) { if(doc.job_title !== undefined) { var myregexp = new RegExp("^Senior "); if(doc.job_title.match(myregexp)){ emit([doc.join_yr, doc.join_mo, doc.join_day], [doc.name, doc.email] );}}}, reduce_fn=None', 'test_view-36d10e0 : map_fn=function (doc) { if(doc.job_title !== undefined) emit([doc.join_yr, doc.join_mo, doc.join_day], [doc.name, doc.email] ); }

      , reduce_fn=_count', 'test_view-1b106a9 : map_fn=function (doc, meta) { if(doc.job_title !== undefined) { var myregexp = new RegExp("^System "); if(doc.job_title.match(myregexp))

      { emit([doc.join_yr, doc.join_mo, doc.join_day], [doc.name, doc.email] );}

      }}, reduce_fn=None']

      Attachments

        1. collect_info.tar
          14.89 MB
        2. logs.tar
          12.53 MB
        3. memc_logs.tar.gz
          13.17 MB
        4. missing_keys.rtf
          1 kB
        5. missing_keys.rtf
          1 kB
        6. stream_logs.txt
          35 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ketaki Ketaki Gangal (Inactive)
            ketaki Ketaki Gangal (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty