MB-10941: When backfill is neccessary always do a full backfill

When sending backfill we need to send the entire thing as a single
snapshot in order to avoid potentially missing de-duplicated items
when then checkpoint ends.

Change-Id: If898be3414bb51b4248dad03176255e5934ac6a2
Reviewed-on: http://review.couchbase.org/37295
Tested-by: Michael Wiederhold <mike@couchbase.com>
Tested-by: Volker Mische <volker.mische@gmail.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>